# Nausica-NPL

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: tests.yml
alembic/: env.py
alembic/versions/: 6caac37ae4b1_initial_schema_users_orgs_sessions_.py  d4f8b2c19a3e_add_recommendations_table.py  fc0a01f4b7da_turn_embedding_column_for_rag.py
configs/: data.yaml  dialogue.yaml  knowledge_graph.yaml  litminer.yaml  model.yaml  rules.yaml
configs/knowledge_graph/: ocd_edges.yaml  ocd_nodes.yaml
demo-vault/: README.md
demo-vault/.obsidian/: community-plugins.json
demo-vault/Journal/: 2026-06-22.md  2026-06-24.md  2026-06-26.md  2026-06-28.md  2026-06-30.md  2026-07-01.md  2026-07-03.md  2026-07-04.md  2026-07-05.md
docs/: ARCHITECTURE.md  CFI_SPECIFICATION.md  DATA_QUALITY.md  FABLE_SPECIFICATION.md  IMPLEMENTATION_PLAN.md  KG_SPECIFICATION.md  LICENSING.md  NICHE_ANALYSIS.md  PHASE6_CLINICAL_REVIEW.md  RESEARCH_FOCUS.md  RESEARCH_PROPOSAL.md  RULES_ENGINE_SPECIFICATION.md  TAXONOMY.md  VALIDATION.md
obsidian-plugin/: .gitignore  esbuild.config.mjs  manifest.json  package-lock.json  package.json  smoke.mjs  styles.css  tsconfig.json
obsidian-plugin/src/: InlineCard.ts  RecommendationModal.ts  RigidityMapView.ts  SettingsTab.ts  api.ts  colors.ts  main.ts  store.ts  testable.ts  types.ts
scripts/: export_preference_pairs.py  run_data_pipeline.sh
src/api/: main.py
src/auth/: dependencies.py  jwt.py  routes.py
src/data_pipeline/: build_contrastive_pairs.py  build_fable_policy_dataset.py  build_temporal_dataset.py  dialogue_expansion.py  download_datasets.py  preprocessing.py  weak_labeling.py
src/db/: models.py  session.py
src/evaluation/: clinical_review.py  llm_judge.py
src/knowledge_graph/: __init__.py  ocd_graph.py  schema.py
src/litminer/: __init__.py  __main__.py  models.py  report.py  search.py  sources.py
src/metrics/: cognitive_flexibility_index.py  composite_rigidity.py
src/models/: archetypes.py  cognitive_fable.py  distortion_classifier.py  mindset_profiler.py  temporal_cfi.py  (+3 more)
tests/: conftest.py  test_archetypes.py  test_auth.py  test_cfi_metric.py  test_cognitive_fable.py  test_composite_rigidity.py  test_db_models.py  test_distortion_classifier.py  test_litminer.py  test_preprocessing.py  test_rag_retrieval.py  test_reframing_dialogue.py  test_rigidity_embedding.py  test_temporal_cfi.py
web/: index.html  package-lock.json  package.json  vite.config.ts
(+35 files in other folders)
