[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nausica"
version = "0.1.0"
description = "Cognitive distortion detection + CBT Socratic reframing with a continuous Cognitive Flexibility Index (CFI)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Juan Pablo Botero", email = "jbotero@aztia.co" }]

dependencies = [
    "torch>=2.1,<3",
    "transformers>=4.40,<5",
    "datasets>=2.19",
    "scikit-learn>=1.4",
    "pandas>=2.1",
    "numpy>=1.26",
    "pyyaml>=6.0",
    "pydantic>=2.6",
    "anthropic>=0.34",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
clustering = ["bertopic>=0.16", "sentence-transformers>=2.6"]
demo = ["streamlit>=1.33", "plotly>=5.20"]
dev = ["pytest>=8.0", "ruff>=0.4", "httpx>=0.27"]
db = [
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "bcrypt<4.1",
    "email-validator>=2.0",
]
reports = ["weasyprint>=61", "matplotlib>=3.8"]
audio = ["faster-whisper>=1.0"]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
